fixed dark mode colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,13 +18,6 @@
   --iw-box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37); /* Box shadow for depth */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
